--- a/apps/dev-collab-web/src/assets/main.scss
+++ b/apps/dev-collab-web/src/assets/main.scss
@@ -1,16 +1,9 @@
-// src/styles/main.scss
+// main.scss
 
 @use 'sass:color';
-@import 'fonts';
 @import 'variables';
-
-body {
-  font-family: $font-family-base;
-  font-weight: $font-weight-regular;
-  line-height: 1.6;
-  color: $color-text;
-  background-color: $color-background;
-}
+@import 'fonts';
+@import 'mixins';
 
 h1,
 h2,
@@ -23,18 +16,102 @@ h6 {
 }
 
 h1 {
-  font-weight: $font-weight-bold;
-  font-size: 2.5rem;
+  font-weight: $h1-font-weight;
+  font-size: $h1-font-size-mb;
+
+  @include responsive(medium) {
+    font-size: $h1-font-size;
+  }
 }
 
 h2 {
-  font-weight: $font-weight-semi-bold;
-  font-size: 2rem;
+  font-weight: $h2-font-weight;
+  font-size: $h2-font-size-mb;
+
+  @include responsive(medium) {
+    font-size: $h2-font-size;
+  }
 }
 
 h3 {
-  font-weight: $font-weight-medium;
-  font-size: 1.75rem;
+  font-weight: $h3-font-weight;
+  font-size: $h3-font-size-mb;
+
+  @include responsive(medium) {
+    font-size: $h3-font-size;
+  }
+}
+
+h4 {
+  font-weight: $h4-font-weight;
+  font-size: $h4-font-size-mb;
+
+  @include responsive(medium) {
+    font-size: $h4-font-size;
+  }
+}
+
+h5 {
+  font-weight: $h5-font-weight;
+  font-size: $h5-font-size-mb;
+
+  @include responsive(medium) {
+    font-size: $h5-font-size;
+  }
+}
+
+.c1 {
+  font-weight: $c1-font-weight;
+  font-size: $c1-font-size-mb;
+
+  @include responsive(medium) {
+    font-size: $c1-font-size;
+  }
+}
+
+.c2 {
+  font-weight: $c2-font-weight;
+  font-size: $c2-font-size-mb;
+
+  @include responsive(medium) {
+    font-size: $c2-font-size;
+  }
+}
+
+.c3 {
+  font-weight: $c3-font-weight;
+  font-size: $c3-font-size-mb;
+
+  @include responsive(medium) {
+    font-size: $c3-font-size;
+  }
+}
+
+.n1 {
+  font-weight: $n1-font-weight;
+  font-size: $n1-font-size-mb;
+
+  @include responsive(medium) {
+    font-size: $n1-font-size;
+  }
+}
+
+.n2 {
+  font-weight: $n2-font-weight;
+  font-size: $n2-font-size-mb;
+
+  @include responsive(medium) {
+    font-size: $n2-font-size;
+  }
+}
+
+.n3 {
+  font-weight: $n3-font-weight;
+  font-size: $n3-font-size-mb;
+
+  @include responsive(medium) {
+    font-size: $n3-font-size;
+  }
 }
 
 p {
@@ -85,4 +162,10 @@ a {
       background-color: color.scale($secondary-color, $lightness: -20.4%);
     }
   }
+}
+
+.modal-dialog {
+  // max-width: var(--bs-modal-width);
+  margin-right: auto !important;
+  margin-left: auto !important;
 }
