--- a/apps/dev-collab-web/src/assets/_base.scss
+++ b/apps/dev-collab-web/src/assets/_base.scss
@@ -30,7 +30,7 @@ body {
 
 @media (prefers-color-scheme: dark) {
   body {
-    color: $vt-c-text-dark-2;
+    //color: $vt-c-text-dark-2;
     background: $vt-c-black;
   }
 }
